# database-course-demo

api/: Cargo.toml
api/src/: database.rs  error.rs  main.rs  service.rs  types.rs
api/src/types/: customer.rs  goods.rs  mod.rs  purchase.rs  receipt.rs  staff.rs  supplied_goods.rs  supplier.rs  user.rs  warehouse.rs
etc/: create_table.sql  demo-api.service  insert_into.sql  nginx.conf
web/: .angular-cli.json  .gitignore  package.json
web/src/: index.html  styles.css
web/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  shared.module.ts
web/src/app/core/: api.service.ts  core.module.ts  index.ts  user.service.ts
web/src/app/customer/: customer-editor-dialog.component.html  customer-editor-dialog.component.ts  customer.component.html  customer.component.ts  index.ts
web/src/app/goods/: goods-editor-dialog.component.html  goods-editor-dialog.component.ts  goods.component.html  goods.component.ts  index.ts
web/src/app/login/: login.component.html  login.component.ts
web/src/app/purchase/: index.ts  purchase-editor-dialog.component.html  purchase-editor-dialog.component.ts  purchase.component.html  purchase.component.ts
web/src/app/receipt/: index.ts  receipt-editor-dialog.component.html  receipt-editor-dialog.component.ts  receipt.component.html  receipt.component.ts
web/src/app/shared/: customer.model.ts  goods.model.ts  index.ts  purchase.model.ts  shared.module.ts  staff.model.ts  supplier.model.ts  user.model.ts  warehouse.model.ts
web/src/environments/: environment.ts
(+5 files in other folders)
