[package]
name = "api"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]

[dependencies]
nom = "^3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1.14"
hyper = "0.11.2"
log = "0.3"
env_logger = "0.3"
postgres = { version = "0.15", features = ["with-chrono"] }
postgres-derive = "0.3"
chrono = { version = "0.4", features = ["serde"] }
